# saexplain

./: .gitignore  Dockerfile  README.md  analyze.py  main.py  pyproject.toml  requirements.txt  run_docker_container.sh  sweep_dreams.sh  train_backbone.sh
assets/configs/: atlas_generation.yaml  eval_clip_fp.yaml  eval_clip_midas.yaml  eval_clip_scin.yaml  explorer_config.yaml  finetune_backbone.yaml  finetune_backbone_dinov3.yaml  finetune_backbone_mae.yaml  finetune_clip_base16.yaml  finetune_clip_base32.yaml  finetune_clip_large14.yaml  finetune_mae_base16.yaml  finetune_mae_huge14.yaml  sae.yaml  sweep.yaml  sweep_batchtopk.yaml  sweep_jumprelu.yaml  sweep_matryoshka.yaml  sweep_relu.yaml  sweep_topk.yaml
configs/: mae.yaml  mae_2.yaml  sae.yaml
notebooks/: data_loading.ipynb
sae/: __init__.py  core.py  registry.py  trainer.py
sae/architectures/: batchtopk.py  gated.py  jumprelu.py  matryoshka.py  relu.py  topk.py
sae/eval/: __init__.py  evaluator.py  post_hoc_eval.py
sae/utils/: sbp.py  scaler.py  schedulers.py
saexplore/: app.py  utils.py
scripts/: entrypoint.sh  extract_embeddings.sh  run.sh  run_cbm_training.sh  run_clip.sh  run_dinov2.sh  run_mae_training.sh  run_probe_training.sh  run_resnet_training.sh  run_sae_training.sh  run_training.sh
src/: __init__.py  inference.py  registry.py  train.py  train_backbone.py  train_classifier.py  train_sae.py
training_scripts/: finetune_custom_mae.py  finetune_mae.py  train_cbm.py  train_clip.py  train_dino.py  train_mae.py  train_mae_probe.py  train_probe.py  train_resnet.py  train_sae.py
(+90 files in other folders)
