[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling"
]

[project]
name = "thesis"
version = "0.1.0"
description = "Using Sparse Autoencoders for concept-based explanations in the domain of dermatology."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "timm>=1.0.20",
    "torchmetrics>=1.8.2",
    "umap-learn>=0.5.9.post2",
    "vit-prisma @ git+https://github.com/Prisma-Multimodal/ViT-Prisma.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src", "sae"]

